<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddAccountsActivity">

        <ImageView
            android:id="@+id/ivAccountLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="116dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tilAccountName"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_accounts" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:layout_marginBottom="8dp"
            android:hint="@string/account_name"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/ivAccountLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAccountName"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInitialAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/initial_amount"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tilAccountName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInitialAccount"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:theme="@style/MyCancelButton"
                android:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_margin="10dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:theme="@style/MyButtonDark"
                android:visibility="visible"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>